--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,19 @@
     <title>N27 - Startseite</title>
   </head>
   <body>
-    <h1>Herzlich Willkommen!</h1>    
+    
+    <!--11.3.-->
+    
+    <header>
+      <h1>Herzlich Willkommen <%= user %>!</h1>    
+    </header>    
+
+    
+    <!--11.3.-->
+    <footer>
+      <a href="/login" class="button">Abmelden</a>
+    </footer>
+
+
   </body>
 </html>
