--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,8 @@
     <title>N27 - Startseite</title>
   </head>
   <body>
-    
-    <!--11.3.-->
-    
     <header>
-      <h1>Herzlich Willkommen <%= user %>!</h1>    
+      <h1>Herzlich Willkommen</h1>    
     </header>    
-
-    
-    <!--11.3.-->
-    <footer>
-      <a href="/login" class="button">Abmelden</a>
-    </footer>
-
-
   </body>
 </html>
