--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,11 +13,12 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
     <title>N27 - Startseite</title>
   </head>
   <body>
     <header>
       <h1>Herzlich Willkommen</h1>    
-    </header>    
+    </header>       
   </body>
 </html>
