--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -14,15 +14,22 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
-    <title>N27 - Startseite</title>
+    <title>N27 - Impressum</title>
   </head>
   <body>
     <header>
-      <h1>Herzlich Willkommen</h1>    
+      <h1>Impressum</h1>    
     </header>    
-    <form>          
-      <button formaction="/">Testbutton</button>
-    </form>  
+    
+    <h2>Disclaimer</h2>
+    <p>Name: N27 AG</p>
+    <p>Anschrift: Josefstraße 10, 46325 Borken</p>
+    <p>Geschäftsführer: X.Y. </p>
+    <p>Handelsregister: HRB 1234</p>
+    <p>Amtsgericht: Borken</p>
+    <p>Umsatzsteuer-ID: 123456</p>
+
+
     <nav>      
       <a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>                        
       <a href="/login">Logout</a>        
