--- a/public/styles.css
+++ b/public/styles.css
@@ -72,9 +72,15 @@ nav {
   font-size: 4vw;    
   text-align:center;  
   color: white;
- }
+}
  
- a {  
+a {  
   color: white;  
   text-decoration: none;
+ }
+
+ p {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 3vw; 
  }
