--- a/views/kontoAnlegen.ejs
+++ b/views/kontoAnlegen.ejs
@@ -34,6 +34,6 @@
         <input type="text" name="kontoart">        
         <button>Konto anlegen</button>
       </form>
-      <label></label>    
+      <label><%= meldung %></label>
   </body>
 </html>
