--- a/Training/klasse-objekt-ejs-trainieren.ejs
+++ b/Training/klasse-objekt-ejs-trainieren.ejs
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <H2>Rechteck</H2>
+    <p>Breite: <%= breite %></p>
+    <p>Länge: <%= laenge %></p>
+    <h2>Schüler</h2>
+    <p>Geschlecht: <%= geschlecht %></p>
+    <p>Alter: <%= alter %></p>
+    <h2>Fußballer</h2>
+    <p>Vorname: <%= vorname %></p>
+    <p>Mannschaft: <%= mannschaft %></p>
 </body>
 </html>
