--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
         <a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>                        
         <a href="/login">Logout</a>        
         <a href="/impressum">Impressum</a>
-        <a href="/stammdatenPflegen"><i class="fa fa-id-card-o" aria-hidden="true"></i></a>  -        
+        <a href="/stammdatenPflegen"><i class="fa fa-id-card-o" aria-hidden="true"></i></a>        
         <a href="mailto:stefan.baeumer@berufskolleg-borken.de"> <i class="fa fa-envelope-o"></i></a>
       </nav>   
       <br>
