--- a/views/stammdatenPflegen.ejs
+++ b/views/stammdatenPflegen.ejs
@@ -33,7 +33,9 @@
         <input type="text"  name="nachname">
         <label>Kennwort:</label>
         <input type="password" name="kennwort">        
-        <button>Stammdaten Pflegen</button>
+        <label>Mail:</label>
+        <input type="email" name="email">
+        <button>Stammdaten Pflegen</button>        
       </form>
       <label><%= meldung %></label>
   </body>
