--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
     </header>    
     <form>          
       <button formaction="/kontoAnlegen">Konto anlegen</button>
+      <button formaction="/ueberweisen">Überweisung tätigen</button>
     </form>  
   </body>
 </html>
