--- a/views/kontoAnzeigen.ejs
+++ b/views/kontoAnzeigen.ejs
@@ -14,11 +14,11 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
-    <title>N27 - Startseite</title>
+    <title>Kontostand anzeigen</title>
   </head>
   <body>
     <header>
-      <h1>Herzlich Willkommen</h1>    
+      <h1>Kontostand anzeigen</h1>    
       <nav>      
         <a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>                        
         <a href="/login">Logout</a>        
@@ -27,11 +27,12 @@
         <a href="mailto:stefan.baeumer@berufskolleg-borken.de"> <i class="fa fa-envelope-o"></i></a>
       </nav>   
       <br>
-    </header>    
-    <form>          
-      <button formaction="/kontoAnlegen">Konto anlegen</button>
-      <button formaction="/ueberweisen">Überweisung tätigen</button>
-      <button formaction="/kontoAnzeigen">Kontostand anzeigen</button>
-    </form>  
+    </header>
+    
+    <!-- 
+    meldung ist eine Variable, die zur Laufzeit den Wert des
+    Kontostands annimmt.
+    -->
+    <label><%= meldung %></label>
   </body>
 </html>
