--- a/views/kontoAnlegen.ejs
+++ b/views/kontoAnlegen.ejs
@@ -30,7 +30,7 @@
     </header>
     <form method="POST" action="/kontoAnlegen">
         <label>Kontonummer:</label>
-        <input type="text" name="kontonummer" pattern="[0-9]{10}" title="Bitte exakt 10 Ziffern eingeben!">
+        <input type="text" name="kontonummer" pattern="[0-9]{10}" title="Bitte die SchülerID eingeben und mit 4 Nullen auffüllen. Beispiel: 1501230000!">
         <label>Kontoart:</label>
         <input type="text" name="kontoart">        
         <button>Konto anlegen</button>
