--- a/views/ueberweisen.ejs
+++ b/views/ueberweisen.ejs
@@ -51,7 +51,7 @@
           <% } %> 
         </select>
         <label>Betrag:</label>
-        <input type="number" name="betrag">
+        <input type="number" name="betrag" min="0.01" step="0.01">
         <label>Verwendungszweck:</label>
         <input type="text" name="verwendungszweck">        
         <button>Überweisung ausführen</button>
