--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
       </nav>   
       <nav>
         <form method="POST" action="/">
-          <input type="text" name="ort" value="<%= ort %>">                  
+          <input style="width: 30%;" type="text" name="ort" value="<%= ort %>">                  
         </form>
         <%= meldungWetter %>
         <fo
