--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,10 +28,9 @@
       </nav>   
       <nav>
         <form method="POST" action="/">
-          <input style="width: 30%;" type="text" name="ort" value="<%= ort %>">                  
-        </form>
+          <input class="weather" type="text" name="ort" value="<%= ort %>">          
         <%= meldungWetter %>
-        <fo
+        </form>
       </nav>
       <br>
     </header>    
