--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,21 @@ input {
   font-size: 6vw;  
 }
 
+input.weather {
+  width: 55%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  background-color: rgb(119, 107, 107);        
+  display: inline-block;
+  border: 0px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: white;
+  font-size: 4vw; 
+  font-family: Arial, Helvetica, sans-serif;
+  direction: rtl;
+}
+
 button {
   width: 100%;
   background-color: #4CAF50;
